--- a/menu.html
+++ b/menu.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Menu</title>
-  <link rel="stylesheet" href="../css/none-style.css">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/media-768px.css">
-  <link rel="stylesheet" href="../css/media-1120px.css">
+  <link rel="stylesheet" href="./css/none-style.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/media-768px.css">
+  <link rel="stylesheet" href="./css/media-1120px.css">
 </head>
 
 
